data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3297.wast
;; 6. **Test Description**: Call a function while providing fewer arguments than required, leading to stack underflow and potential 'unreachable' execution if the function attempts to access non-existent stack values.

(assert_invalid
  (module
    (func $callee (param i32 i32) (result i32)
      ;; Attempt to add the two parameters
      (i32.add (local.get 0) (local.get 1)))
    (func $caller (result i32)
      ;; Call $callee with only one argument instead of two, causing stack underflow
      (call $callee (i32.const 42)))
    (export "call_callee" (func $caller))
  )
  "type mismatch"
)